k8s/server/overlays/ephemeral/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
      - name: server
        image: northamerica-northeast1-docker.pkg.dev/pht-01hp04dtnkf/hopic-k8s-images/cpho-phase2:prod-fa2312df-1708014514 # {"$imagepolicy": "flux-system:dev-test"}
        resources:
          # Autopilot only considers requests (see https://cloud.google.com/kubernetes-engine/docs/concepts/autopilot-resource-requests#resource-limits)
          requests:
            # Experiment: using the minimum pod resources https://cloud.google.com/kubernetes-engine/docs/concepts/autopilot-resource-requests#compute-class-min-max
            cpu: 200m # + `isito-proxy` container = 250m
            memory: 500Mi # + `isito-proxy` container = 512MiB
