k8s/server/overlays/ephemeral/django/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server-virtual-service
spec:
  hosts:
    - ${BRANCH_NAME}.eph.hopic-sdpac.phac-aspc.alpha.canada.ca
  gateways:
  - istio-ingress/public-gateway
  http:
  - name: gateway-to-server
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: server.${BRANCH_NAME}.svc.cluster.local
